--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -3,96 +3,20 @@
     This work hopes to answer the following questions about CrashSimulator's operation:
 
         \begin{enumerate}
-            %% First cut at questions
-            \item{Is CrashSimulator successful in identifying previously-unknown flaws in existing applications?}
-            \item{Can CrashSimulator's efficacy be shown through identifying known bugs in existing applications?}
-            \item{Is CrashSimulator able to execute tests in a performant manner?}
+            \item{#Is CrashSimulator successful in identifying previously-unknown flaws in existing applications?}
+            \item{#Can CrashSimulator's efficacy be shown through identifying known bugs in existing applications?}
+            \item{#Is CrashSimulator able to execute tests in a performant manner?}
             \item{What type of bugs is CrashSimulator able to identify?}
-            \item{Are there types of bugs that CrashSimulator is not able to identify?}
-            \item{What technical limitations are present in this implementation of CrashSimulator}
-            \item{How can CrashSimulator deal with false positives}
+            \item{#Are there types of bugs that CrashSimulator is not able to identify?}
+            \item{#How can CrashSimulator deal with false positives}
+            \item{#What technical limitations are present in this implementation of CrashSimulator}
         \end{enumerate}
 
-    \subsection{Experimental Setup}
-
-    CrashSimulator was implemented in a combination of Python 2 and C.  Evaluations were performed using Ubuntu Linux
-    15.04 with several modifications put in place to allow CrashSimulator to operate correctly. First, because
-    CrashSimulator relies on an application's memory layout being the same across repeated executions, address space
-    layout randomization must be disabled.  Second, the kernel's virtual dynamic shared object feature must be
-    disabled.  This feature allows certain kernel data items (timestamps, kernel version information, etc.) to be stored
-    in user space.  When the system calls that retrieve this information are made by an application they are instead
-    intercepted and handled in user space -- a behavior that would preclude CrashSimulator from being able to interact
-    with these calls.  Finally, a 32-bit Linux kernel and supporting environment were chosen.  While CrashSimulator
-    could have been implemented on either a 32-bit kernel or a 64-bit kernel such a goal would have resulted in a great
-    deal of duplicated effort around dealing with the low level differences between these two kernel versions.
-    \emph{I've got a lot more I could talk about here but I'm not sure what info normally goes into this section}
-
-    \subsection{Execution Performance}
-
-        One key attribute of successful testing tools is that they be able to complete their tests in a timely manner.
-        If a tool takes too long to complete its tests users will be less likely to run it frequently, or at all,
-        reducing the tools overall usefulness dramatically. To this end, the performance of CrashSimulator was evaluated
-        in order to determine whether or not it was able to complete its test executions in an acceptable time frame.
-
-        \subsubsection{Evaluation Against Sample Programs}
-
-        Each of the following evaluations eamines the completion times for 20 consecutive executions of the specified
-        application in both native and replay execution modes.  Multiple conseuritve executions were used for two
-        reasons.  First, a single execution in either mode completes so quickly for the applications in question as to
-        be nearly indistinguishable from the other mode.  Second, multiple executions somewhat contros for varying
-        conditions like filesystem activity or network latency that can vary between individual executions.
-
-            \begin{table}[H]
-                \scriptsize{}
-                \begin{tabular}{l  l  l  l}
-                    \toprule{}
-                        Execution Description & Native Eecution & Replay Execution\\
-                        network\_speedtest & 0.024 & 2.407 \\
-                        filesystem\_speedtest & 0.038 & 2.604 \\
-                        mv (cross-disk file move) & 0.016 & 2.995 \\
-                    \bottomrule{}
-                \end{tabular}
-            \end{table}
-
-        \paragraph{Discussion on network\_speedtest}
-
-        Sample application opens a TCP connection to an already running listener (netcat), sends a message, and
-        exits. For simple applications like this, native execution is significantly faster than replay execution...
-
-        \paragraph{Discussion on filesystem\_speedtest}
-
-        This sample application create a new file with open(), writes a message to it, closes the file descriptor, and
-        exit()'s. This test is particularly meaningful as it replicates a pattern of system calls that is used for in
-        all sorts of applications in Linux...
-
-        \paragraph{Discussion on mv}
-
-        In addition to the newly constructed sample programs, performance values for replay of an execution of {\tt
-          mv} moving a file between two separate disks were recorded.  Results indicate that CrashSimulator is able to
-        replay this operation in a similar time period to the time in which it is able to replay the dramatically
-        simpler programs.  The fact that {\tt mv} makes an order of magnitude more system calls did not substantially
-        increase replay time.
-
-            
     \subsection{Bugs Identified in Major Applications}
 
-        \subsubsection{Identification of Known Bugs}
+        \subsubsection{Identification of Unknown Bugs - Can CrashSimulator Identify Unknown Bugs}
 
-        Another way we evaluated the efficacy of CrashSimulator was on its ability to detect known bugs as recorded in
-        the bug trackers of major open source software projects.
-
-            \paragraph{Race Condition in shutil.copy, shutil.copy2, shutil.copyfile - Bug ID\# 15100}
-              
-            This bug describes a situation where the described functions in the shutil package do not perform the checks
-            necessary to prevent a race condition around the process of copying a file from one filesystem to another --
-            a situation that prevents the use of the safer {\tt rename()} system call.  CrashSimulator is able to detect this
-            issue in replayed executions of python applications that make use of these functions by identifying the
-            applications failure to use {\tt fstat()} to verify that a file has not changed between the time the file was
-            first checked with {\tt stat()} and when it was open()'d at the start of the copy process.
-
-        \subsubsection{Identification of Unknown Bugs}
-
-        \subsubsection{Cross-Device Move Bugs}
+        \paragraph{Cross-Device Move Bugs}
 
         In Linux, the rename() system call will only move a file if the source and destination are on the same device.
         This means that moving a file from a directory structure location on one storage device to a directory structure location on
@@ -141,10 +65,10 @@
         situations where the source is a special file such as /dev/urandom.  If an application fails to detect this
         situation, the typical steps in a manual copy process could result in the application filling the destination
         device, consuming available memory, or simply hanging indefinitely as it attempts to read in the full contents
-        of an effectively infinite-sized file. \emph{Detect actively by injecting st_mode=S_IFCHR, or passively by
-          monitoring trace where an actual /dev/urandom copy is attempted -Preston}
+        of an effectively infinite-sized file.
+        %\emph{Detect actively by injecting st_mode=S\_IFCHR, or passively by monitoring trace where an actual /dev/urandom copy is attempted -Preston}
 
-\begin{figure*}[t]
+        \begin{figure*}[t]
  %           \begin{table}%[t]
                 \scriptsize{}
                 \begin{tabular}{l l l l l l | l}
@@ -159,7 +83,7 @@
                 \bottomrule{}
                 \end{tabular}
  %           \end{table}
-\end{figure*}
+        \end{figure*}
 
         \subsubsection{Non-Regular File Bugs}
 
@@ -176,9 +100,9 @@
 
             \begin{table*}[t]
                 \scriptsize{}
-                \begin{tabular}{l  l  l  | l}
+                \begin{tabular}{l  l  l  l  l  l  l  l  l}
                 \toprule{}
-                  Application & Condition Tested           & S_IFREG        & S_IFDIR        & S_IFCHR     & S_IFBLK    & S_FIFO      & S_IFLNK    & S_IFSOCK\\
+                  Application & Condition Tested           & IFREG        & IFDIR        & IFCHR     & IFBLK    & FIFO      & IFLNK    & IFSOCK\\
                   Aspell      & Dictionary File            & Initial Value  & Fail           & Recognizes  & Fail       & Fail        & Fail       & Fail\\
                   Aspell      & File being checked         & Initial Value  & Fail           & Recognizes  & Fail       & Fail        & Fail       & Fail\\
                   gnu-gpg     & secring.gpg                & Initial Value  & Fail           & Fail        & Fail       & Fail        & Fail       & Fail\\
@@ -198,6 +122,88 @@
                 \end{tabular}
             \end{table*}
 
+        \subsubsection{Identification of Known Bugs - Can CrashSimulator Find Known Bugs}
+
+        Another way we evaluated the efficacy of CrashSimulator was on its ability to detect known bugs as recorded in
+        the bug trackers of major open source software projects.
+
+            \paragraph{Race Condition in shutil.copy, shutil.copy2, shutil.copyfile - Bug ID\# 15100}
+              
+            This bug describes a situation where the described functions in the shutil package do not perform the checks
+            necessary to prevent a race condition around the process of copying a file from one filesystem to another --
+            a situation that prevents the use of the safer {\tt rename()} system call.  CrashSimulator is able to detect this
+            issue in replayed executions of python applications that make use of these functions by identifying the
+            applications failure to use {\tt fstat()} to verify that a file has not changed between the time the file was
+            first checked with {\tt stat()} and when it was open()'d at the start of the copy process.
+        
+
+
+    \subsection{Execution Performance - Is CrashSimulator Performant}
+
+        One key attribute of successful testing tools is that they be able to complete their tests in a timely manner.
+        If a tool takes too long to complete its tests users will be less likely to run it frequently, or at all,
+        reducing the tools overall usefulness dramatically. To this end, the performance of CrashSimulator was evaluated
+        in order to determine whether or not it was able to complete its test executions in an acceptable time frame.
+
+        \subsubsection{Evaluation Against Sample Programs}
+
+        Each of the following evaluations eamines the completion times for 20 consecutive executions of the specified
+        application in both native and replay execution modes.  Multiple conseuritve executions were used for two
+        reasons.  First, a single execution in either mode completes so quickly for the applications in question as to
+        be nearly indistinguishable from the other mode.  Second, multiple executions somewhat contros for varying
+        conditions like filesystem activity or network latency that can vary between individual executions.
+
+            \begin{table}[H]
+                \scriptsize{}
+                \begin{tabular}{l  l  l  l}
+                    \toprule{}
+                        Execution Description & Native Eecution & Replay Execution\\
+                        network\_speedtest & 0.024 & 2.407 \\
+                        filesystem\_speedtest & 0.038 & 2.604 \\
+                        mv (cross-disk file move) & 0.016 & 2.995 \\
+                    \bottomrule{}
+                \end{tabular}
+            \end{table}
+
+        \paragraph{Discussion on network\_speedtest}
+
+        Sample application opens a TCP connection to an already running listener (netcat), sends a message, and
+        exits. For simple applications like this, native execution is significantly faster than replay execution...
+
+        \paragraph{Discussion on filesystem\_speedtest}
+
+        This sample application create a new file with open(), writes a message to it, closes the file descriptor, and
+        exit()'s. This test is particularly meaningful as it replicates a pattern of system calls that is used for in
+        all sorts of applications in Linux...
+
+        \paragraph{Discussion on mv}
+
+        In addition to the newly constructed sample programs, performance values for replay of an execution of {\tt
+          mv} moving a file between two separate disks were recorded.  Results indicate that CrashSimulator is able to
+        replay this operation in a similar time period to the time in which it is able to replay the dramatically
+        simpler programs.  The fact that {\tt mv} makes an order of magnitude more system calls did not substantially
+        increase replay time.
+
+    \subsection{What Kind of Bugs Can CrashSimulator Find}
+
+    \emph{I feel like this needs subsection needs to be here but I am not sure how to state things so that it isn't just
+      the exact opposite of what I say in the next section}
+
+    \subsection{Bugs Outside the View of CrashSimulator - What kinds of bugs can CrashSimulator not Find}
+
+    CrashSimulator is not able to detect bugs that do not result from or have a visible effect on the system calls
+    an application makes.  An example of this situation exposed during work on this evaluation is applications
+    mishandling a situation around file moves where the where, due to a strange volume mounting arrangement, the
+    source directory is moved into itself.  In order to detect this situation the application must make an effort to
+    gather the full path of both the source and destination and compare them.  While CrashSimulator is able to
+    observe some aspects of the ``gathering'' process (i.e. the stat() or lstat() calls) it is not able to observe
+    whether a proper comparison takes place.  As a result, the best a CrashSimulator checker could do in this
+    situation is observe a lack of gathering-related system calls and issue a warning that the issue might be
+    present.  \emph{CrashSimulator could detect this issue during a specially crafted execution which replays a
+        trace recorded where the issue was present.  I'm not sure how useful this would be as presumably the while
+        recording the trace the user would be able to directly observe whether things happened correctly or not}
+    % Maybe discuss this as related work
+        
     \subsection{Dealing with False Positives}
 
     A the primary source of false positives for CrashSimulator is an application using a different sequence of system
@@ -246,12 +252,26 @@
             \bottomrule{}
             \end{tabular}
         \end{table*}
-
     
    In situations where two system call sequences can correctly implement the same operation CrashSimulator simply runs
    two computational models in parallel and accepts the execution if either model ends in an accepting condition. 
 
-    \subsection{Limitations}
+    \subsection{Experimental Setup}
+
+    CrashSimulator was implemented in a combination of Python 2 and C.  Evaluations were performed using Ubuntu Linux
+    15.04 with several modifications put in place to allow CrashSimulator to operate correctly. First, because
+    CrashSimulator relies on an application's memory layout being the same across repeated executions, address space
+    layout randomization must be disabled.  Second, the kernel's virtual dynamic shared object feature must be
+    disabled.  This feature allows certain kernel data items (timestamps, kernel version information, etc.) to be stored
+    in user space.  When the system calls that retrieve this information are made by an application they are instead
+    intercepted and handled in user space -- a behavior that would preclude CrashSimulator from being able to interact
+    with these calls.  Finally, a 32-bit Linux kernel and supporting environment were chosen.  While CrashSimulator
+    could have been implemented on either a 32-bit kernel or a 64-bit kernel such a goal would have resulted in a great
+    deal of duplicated effort around dealing with the low level differences between these two kernel versions.
+    \emph{I've got a lot more I could talk about here but I'm not sure what info normally goes into this section}
+
+
+    \subsection{Limitations - What are CrashSimulator's Technical Limitations}
 
         The current implementation of CrashSimulator has the following limitations that could be addressed by future work.
 
@@ -281,18 +301,3 @@
         passed into a system call and all data returned from the system call either as a return value or as some block
         of memory written into the calling process's memory.  It is possible that some system call tracing tools do not
         support this level of detail.
-
-        \paragraph{Bugs Outside the View of CrashSimulator}
-
-        CrashSimulator is not able to detect bugs that do not result from or have a visible effect on the system calls
-        an application makes.  An example of this situation exposed during work on this evaluation is applications
-        mishandling a situation around file moves where the where, due to a strange volume mounting arrangement, the
-        source directory is moved into itself.  In order to detect this situation the application must make an effort to
-        gather the full path of both the source and destination and compare them.  While CrashSimulator is able to
-        observe some aspects of the ``gathering'' process (i.e. the stat() or lstat() calls) it is not able to observe
-        whether a proper comparison takes place.  As a result, the best a CrashSimulator checker could do in this
-        situation is observe a lack of gathering-related system calls and issue a warning that the issue might be
-        present.  \emph{CrashSimulator could detect this issue during a specially crafted execution which replays a
-          trace recorded where the issue was present.  I'm not sure how useful this would be as presumably the while
-          recording the trace the user would be able to directly observe whether things happened correctly or not}
-        % Maybe discuss this as related work
