--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -3,13 +3,13 @@
     This work hopes to answer the following questions about CrashSimulator's operation:
 
         \begin{enumerate}
-            \item{#Is CrashSimulator successful in identifying previously-unknown flaws in existing applications?}
-            \item{#Can CrashSimulator's efficacy be shown through identifying known bugs in existing applications?}
-            \item{#Is CrashSimulator able to execute tests in a performant manner?}
+            \item{Is CrashSimulator successful in identifying previously-unknown flaws in existing applications?}
+            \item{Can CrashSimulator's efficacy be shown through identifying known bugs in existing applications?}
+            \item{Is CrashSimulator able to execute tests in a performant manner?}
             \item{What type of bugs is CrashSimulator able to identify?}
-            \item{#Are there types of bugs that CrashSimulator is not able to identify?}
-            \item{#How can CrashSimulator deal with false positives}
-            \item{#What technical limitations are present in this implementation of CrashSimulator}
+            \item{Are there types of bugs that CrashSimulator is not able to identify?}
+            \item{How can CrashSimulator deal with false positives}
+            \item{What technical limitations are present in this implementation of CrashSimulator}
         \end{enumerate}
 
     \subsection{Bugs Identified in Major Applications}
