--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -353,6 +353,9 @@
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 
+% So Justin can comment in the text
+\input{annotations}
+
 
 \begin{document}
 %
